# nrf24xx_lib

./: CMakeLists.txt  README.md
inc/: nrf24xx.h
src/: nrf24xx.c
